Fix [UI] header flicker while navigating

--- a/src/common/Loader/loader.scss
+++ b/src/common/Loader/loader.scss
@@ -4,7 +4,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 7;
+  z-index: 998;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -23,7 +23,7 @@
       border-color: $cornflowerBlue transparent $cornflowerBlue transparent;
       border-radius: 50%;
       animation: rotate 1.5s linear infinite;
-      content: " ";
+      content: ' ';
     }
   }
 
